fixing line endings on the Python post, tweaking formatting

--- a/_posts/2011-02-05-python-what-i-wish-id-known.html
+++ b/_posts/2011-02-05-python-what-i-wish-id-known.html
@@ -4,15 +4,29 @@ title: "Python: What I wish I'd known"
 tags: 
 - Notes
 ---
-As I reach the one year mark of Python programming, I still find things that make my life easier. Things I wish I'd known earlier. Here are those little tricks of the trade I've picked up:
-<h2>Shelling Out</h2>
+
+As I reach the one year mark of Python programming, I still find
+things that make my life easier. Things I wish I'd known earlier. Here
+are those little tricks of the trade I've picked up:
+
+<h3>Shelling Out</h3>
 The basic Python shell is pretty limited. There are a few shortcuts worth learning:
 
 1. If you want to access your last result, it's saved the '_' variable.
-<pre lang="python">>>> 2 * 5
+
+{% highlight python %}
+>>> 2 * 5
 10
 >>> _ + 1 # the underscore variables holds the last used result
-11</pre>
+11
+{% endhighlight %}
+
+{% highlight ruby %}
+def foo
+  puts 'foo'
+end
+{% endhighlight %}
+
 
 2. <code>help()</code> also works for imported modules and packages. If you don't know where a module is being imported from, just call <code>help()</code> on it. This saves you poking through <code>sys.path</code>.
 
@@ -52,12 +66,12 @@ Personally, I stick to bpython as Ipython can be frustratingly buggy at times. U
 
 Both shells are just an <code>$ easy_install bpython</code> or <code>$ easy_install ipython</code> away.
 
-<h2>Python 3 is a-comin'</h2>
+<h3>Python 3 is a-comin'</h3>
 Python 3 offers many advantages over Python 2.X, but many libraries don't support it yet. Web frameworks are beginning to catch up, but it will be a few months before you can Django et al without Python 2. Use Python 3 when you can, but check in advance what your dependencies need.
 
 If in doubt, use Python 2 and use the <code>2to3</code> tool to make sure your code is easily ported to Python 3.
 
-<h2>Learn your pitfalls</h2>
+<h3>Learn your pitfalls</h3>
 
 Python has relatively few sharp edges, but there are a few to be aware of:
 
@@ -115,15 +129,15 @@ UnboundLocalError: local variable 'x' referenced before assignment
 True
 </pre>
 
-<h2>env is your friend</h2>
+<h3>env is your friend</h3>
 
 It is tempting to write #!/usr/bin/python at the top of scripts, but this assumes that a Python interpreter is available in that directory. It's safer to write #!/usr/bin/env python.
 
-<h2>pip: easy_install done right</h2>
+<h3>pip: easy_install done right</h3>
 
 As you get more experienced with Python, you will find that the standard library doesn't always meet you needs. The <a href="http://pypi.python.org/pypi">Python Package Index (PyPI)</a> offers a broad range of libraries to help you Get Stuff Done. You can simply use <code>easy_install</code> to install packages, but <code>pip</code> (available on PyPI) is far more capable. For example, it includes an uninstall feature, which easy_install lacks.
 
-<h2>virtualenv: Solving library grief</h2>
+<h3>virtualenv: Solving library grief</h3>
 
 Sooner or later, you will try to to run two different pieces of code that have mutually incompatible dependencies. In these situations, <a href="http://pypi.python.org/pypi/virtualenv/1.5.1">virtualenv</a> will save you. It allows you to set up different environments with different library selections. You can then easily flick between environments as your needs change.
 <h2>pyflakes keeps you honest</h2>
