--- a/about.html
+++ b/about.html
@@ -16,6 +16,10 @@ layout: default
 		on <a href="http://github.com/Wilfred">GitHub</a>,
 		and <a href="http://twitter.com/dontYetKnow">on Twitter</a>.</p>
 
+		<p>If you want to contact me directly, my email address is
+		<a href="http://www.google.com/recaptcha/mailhide/d?k=01hTsBEDXE7mwk3CX_t044ZA==&amp;c=rCfqcoJfHYVN5Hh2JrYh2jXmvZHolc7j7-KHMXKii1s=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501hTsBEDXE7mwk3CX_t044ZA\75\75\46c\75rCfqcoJfHYVN5Hh2JrYh2jXmvZHolc7j7-KHMXKii1s\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@wilfred.me.uk.
+		</p>
+
 		<h3>Licensing</h3>
 		
 		<p>All text here
