--- a/all_posts.html
+++ b/all_posts.html
@@ -9,13 +9,15 @@ layout: default
  
 	<div class="all-posts">
 
-	<ul>
-	{% for post in site.posts %}
-	<li>
-		<a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }})
-	</li>
-	{% endfor %}
-	</ul>
+	    <table>
+                <tbody>
+	        {% for post in site.posts %}
+	        <tr>
+                    <td>{{ post.date | date_to_string }}</td>
+                    <td><a href="{{ post.url }}">{{ post.title }}</a></td>
+	        </tr>
+	        {% endfor %}
+                </tbody>
+            </table>
 	</div>
-
 </div>
