Using article tags and title classes.

--- a/all_posts.html
+++ b/all_posts.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<div>
-	<h2 id="post-1">
+<article>
+	<h2 class="title">
 		All Posts
 	</h2>
  
@@ -20,4 +20,4 @@ layout: default
                 </tbody>
             </table>
 	</div>
-</div>
+</article>
