More dead links.

--- a/_posts/2009-06-11-cambridge-links.html
+++ b/_posts/2009-06-11-cambridge-links.html
@@ -13,7 +13,6 @@ tags:
 <li><a href="http://www.talks.cam.ac.uk/show/index/15345">CompSci talks</a></li> 
 <li><a href="http://www-uxsup.csx.cam.ac.uk/nfs-server/">Unix mirror</a></li> 
 <li><a href="https://camcors.cam.ac.uk/camcors">CamCors (view supervision reports)</a></li> 
-<li><a href="http://msdn08.e-academy.com/elms/Storefront/Home.aspx?campus=cambridge_cl">Cambridge MSDNAA</a></li> 
 <li><a href="http://groups.pwf.cam.ac.uk/clteach/grpproj/charlie/">Group  Project</a></li> 
 <li><a href="http://www.dpmms.cam.ac.uk/~tf/cam_only/teaching.html">Misc logic notes</a></li> 
 <li><a href="http://probing.csx.cam.ac.uk/">Results of cambridge PC port scans</a></li> 
@@ -35,15 +34,12 @@ tags:
 <ul> 
 <li><a href="http://www.chu.cam.ac.uk/">Churchill College</a></li> 
 <li><a href="http://www.chu.cam.ac.uk/members/computing/networktraffic/">View traffic report</a></li> 
-<li><a href="http://www.chu.cam.ac.uk/collegelife/roomsballot/status.php">Room Ballot</a></li> 
 <li><a href="http://www.chu.cam.ac.uk/members/booking/hall/index.php">Formal booking</a></li> 
 <li><a href="http://www.chu.cam.ac.uk/liberty3/gateway/gateway.exe?application=Liberty3&amp;amp;displayform=opac/main">Library Catalogue</a></li> 
-<li><a href="http://www.chu.cam.ac.uk/members/useful_stuff/Term_dates.php">Churchill term dates</a></li> 
 <li><a href="http://jcr.chu.cam.ac.uk/">Churchill JCR</a></li> 
 </ul> 
 <h3>General Cambridge</h3> 
 <ul> 
-<li><a href="http://ul-newton.lib.cam.ac.uk/cgi-bin/Pwebrecon.cgi?PAGE=pbLogon">Renew books in any library</a></li> 
-<li><a href="http://copac.ac.uk/">Less nasty library search engine</a> 
+<li><a href="http://copac.ac.uk/">Superior library search engine</a> 
 </li><li><a href="http://www.mypidge.com/Get-Involved/">Cambridge Events</a></li> 
 </ul> 
