mypidge no longer exists.

--- a/_posts/2009-06-11-cambridge-links.html
+++ b/_posts/2009-06-11-cambridge-links.html
@@ -36,10 +36,6 @@ tags:
 <li><a href="http://www.chu.cam.ac.uk/members/computing/networktraffic/">View traffic report</a></li> 
 <li><a href="http://www.chu.cam.ac.uk/members/booking/hall/index.php">Formal booking</a></li> 
 <li><a href="http://www.chu.cam.ac.uk/liberty3/gateway/gateway.exe?application=Liberty3&amp;amp;displayform=opac/main">Library Catalogue</a></li> 
+<li><a href="http://copac.ac.uk/">Superior general library search engine</a> 
 <li><a href="http://jcr.chu.cam.ac.uk/">Churchill JCR</a></li> 
-</ul> 
-<h3>General Cambridge</h3> 
-<ul> 
-<li><a href="http://copac.ac.uk/">Superior library search engine</a> 
-</li><li><a href="http://www.mypidge.com/Get-Involved/">Cambridge Events</a></li> 
 </ul> 
